Fixing bug 173069, relative URLS with PLUGINSPAGE PLUGINURL